--- a/src/app/ricky/pages/all-character/all-character.html
+++ b/src/app/ricky/pages/all-character/all-character.html
@@ -15,7 +15,7 @@
             class="text-6xl md:text-7xl font-black text-center bg-clip-text text-transparent bg-gradient-to-r from-white via-gray-100 to-gray-300 drop-shadow-2xl animate-pulse">
             Ricky
         </h1>
-        <div class="mt-4 text-center">
+        <div class="mt-4 tewxt-center">
             <div class="inline-block h-1 w-24 bg-gradient-to-r from-yellow-400 to-orange-500 rounded-full shadow-lg">
             </div>
         </div>
